--- a/hardric portfolio/index.html
+++ b/hardric portfolio/index.html
@@ -149,10 +149,32 @@
             <p>0906-587-6602</p>
           </li>
           <li class="social-links">
-            <a href="#">LINK</a>
-            <a href="#">LINK</a>
-            <a href="#">LINK</a>
-            <a href="#">LINK</a>
+            <a href="https://github.com/awayanrichardjr">
+              <img src="img/svg/github.svg" alt="github" style="width: 25px" />
+            </a>
+            <a href="https://www.facebook.com/awayanrichardjr">
+              <img
+                src="img/svg/facebook.svg"
+                alt="facebook"
+                style="width: 25px"
+              />
+            </a>
+            <a href="https://www.instagram.com/awayanrichardjr/">
+              <img
+                src="img/svg/instagram.svg"
+                alt="instagram"
+                style="width: 25px"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/richard-dumael-awayan-jr-b256502b8/"
+            >
+              <img
+                src="img/svg/linkedin.svg"
+                alt="linkedin"
+                style="width: 25px"
+              />
+            </a>
           </li>
         </ul>
         <iframe
